[project]
name = "bada-dunderrrrrr-se"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "htpy>=25.2.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "sentry-sdk[flask]>=2.20.0",
]
